<resources>
    <string name="app_name">Task</string>
    <string name="permission">Permission</string>
    <string name="multiple_permission">Multiple permission needed</string>
    <string name="no_internet_connection">No Internet Connection Available</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="repository_list">Repository List</string>
    <string name="add_repository">Add Repository</string>
    <string name="no_repo_available_msg">Track Your Favourite Repository</string>
    <string name="add_now">Add Now</string>
    <string name="owner_name">Owner Name</string>
    <string name="repository">Repository</string>
    <string name="owner_name_valid_msg">Please Enter Owner Name</string>
    <string name="repository_valid_msg">Please Enter Repository</string>
    <string name="description">Description :</string>
    <string name="message">Message</string>
    <string name="repository_not_found">Repository Not Found</string>
    <string name="response_fail">Response Fail</string>
    <string name="response_null">Response Null</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="retry">Retry</string>
</resources>