<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddRepositoryActivity">

    <include
        android:id="@+id/clToolbar"
        layout="@layout/row_toolbar_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clToolbar">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtOwnerName"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/EditTextBackgroundHeight"
            android:hint="@string/owner_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/etOwnerName"
                style="@style/MyTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapSentences"
                tools:ignore="Autofill,LabelFor,TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtRepository"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/EditTextBackgroundHeight"
            android:hint="@string/repository"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtOwnerName">

            <EditText
                android:id="@+id/etRepository"
                style="@style/MyTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapSentences"
                tools:ignore="Autofill,LabelFor,TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnAddRepo"
            style="@style/ButtonNormal"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/bg_rounded"
            android:text="@string/add_repository"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtRepository" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>